fix broken css after bootstrap

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -108,7 +108,7 @@ $nav-lblue:#A4CDFF;
                 margin:auto;
                 margin-left: 0;
                 padding: 10px;
-                width: 168px;
+                width: 90%;
                 overflow: visible;
                 transform: translateX(-200px);
 
@@ -134,7 +134,7 @@ $nav-lblue:#A4CDFF;
                         display: flex;
                         justify-content: space-between;
                         align-items: center;
-                        width: 60%;
+                        width: 80%;
                         color: black;
                         text-decoration: none;
                         font-size: 1em;
